# efp

./: .gitmodules  Cargo.toml  README.md
efp/: Cargo.toml  README.md
efp-sys/: Cargo.toml  README.md  build.rs
efp-sys/efp-cmake/: CMakeLists.txt
efp-sys/src/: lib.rs
efp/src/: lib.rs
efp/tests/: roundtrip.rs
gst-plugin-efp/: Cargo.toml  README.md
gst-plugin-efp/src/: lib.rs
gst-plugin-efp/src/efpdemux/: imp.rs  mod.rs
gst-plugin-efp/src/efpmux/: imp.rs  mod.rs
gst-plugin-efp/tests/: pipeline.rs
