[package]
name = "gst-plugin-efp"
version = "0.2.6"
edition = "2021"
description = "GStreamer plugin for EFP muxing and demuxing"
license = "MIT"
repository = "https://github.com/eyevinn/efp"

[dependencies]
efp = { path = "../efp" }
glib = "0.22"
gst = { package = "gstreamer", version = "0.25" }

[dev-dependencies]
gst-app = { package = "gstreamer-app", version = "0.25" }

[build-dependencies]
gst-plugin-version-helper = "0.8"

[lib]
name = "gstefp"
crate-type = ["cdylib", "rlib"]
